--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
   "description": "",
   "dependencies": {
     "angular": "^1.8.2",
+    "angular-jwt": "^0.1.11",
+    "angular-storage": "^0.0.15",
     "express": "^4.18.2",
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "jsonwebtoken": "^9.0.0"
   }
 }
