--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,3 @@
-FROM nginx:latest
-
-RUN rm -rf /etc/nginx/conf.d/default.conf
-
-COPY . /usr/share/nginx/html
-
+FROM nginx
+COPY ./ /usr/share/nginx/html
 EXPOSE 8080
