--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "angular": "^1.8.2",
+    "angular": "^1.8.3",
+    "angular-animate": "^1.8.3",
+    "angular-aria": "^1.8.3",
     "angular-jwt": "^0.1.11",
+    "angular-material": "^1.2.5",
+    "angular-messages": "^1.8.3",
     "angular-storage": "^0.0.15",
+    "bootstrap": "^5.3.0",
     "express": "^4.18.2",
     "http-server": "^14.1.1",
     "jsonwebtoken": "^9.0.0"
